--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
-    id "com.github.johnrengelman.shadow" version "4.0.3"
-    id "org.sonarqube" version "2.8"
-    id "org.owasp.dependencycheck" version "5.2.2"
+    id "com.github.johnrengelman.shadow" version "6.0.0"
+    id "org.sonarqube" version "3.0"
+    id "org.owasp.dependencycheck" version "5.3.2.1"
 }
 
 apply plugin: 'maven'
@@ -18,31 +18,31 @@ if (file(externalFileName).exists()) {
 }
 
 description = 'payment-method-equens'
-group = 'com.payline.payment.scti-equens'
+group = 'com.payline.payment.sct-equens'
 version = '1.4-SNAPSHOT'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.13
+targetCompatibility = 1.13
 
 compileJava.options.encoding = 'UTF-8'
 
 ext {
-    paymentMethodApiVersion = '1.8-SNAPSHOT'
+    paymentMethodApiVersion = '1.9'
     paymentMethodIntegrationVersion = '1.4'
 }
 
 dependencies {
     compile group:'com.payline', name: 'payment-method-api', version: "$paymentMethodApiVersion"
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
-    implementation group: 'org.tomitribe', name: 'tomitribe-http-signatures', version: '1.3'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
+    implementation group: 'org.tomitribe', name: 'tomitribe-http-signatures', version: '1.4'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0-M1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0-M1'
 }
 
 jar {
@@ -62,15 +62,17 @@ jar {
 assemble.dependsOn shadowJar
 
 shadowJar {
-    classifier = ''
+    archiveClassifier.set("")
     dependencies {
-        exclude(dependency('com.payline:payment-method-api'))
-        exclude(dependency('org.apache.logging.log4j:log4j-api:2.11.0'))
-        exclude(dependency('org.apache.logging.log4j:log4j-core:2.11.0'))
+        exclude('com.payline:payment-method-api')
+        exclude('org.apache.logging.log4j:log4j-api:2.13.3')
+        exclude('org.apache.logging.log4j:log4j-core:2.13.3')
 
-        exclude(dependency('org.junit.jupiter:junit-jupiter-params'))
-        exclude(dependency('org.junit.jupiter:junit-jupiter-api'))
+        exclude('org.junit.jupiter:junit-jupiter-params')
+        exclude('org.junit.jupiter:junit-jupiter-api')
+
     }
+
 }
 
 processResources {
