--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'jacoco'
 
 description = 'payment-method-sct-equens'
 group = 'com.payline.payment.sct-equens'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
