--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 description = 'payment-method-sct-equens'
-group = 'com.payline.payment.sct-equens'
+group = com.payline.payment.sct-equens
 version = '1.1'
 
 paymentMethodApiVersion = 1.9
