--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 description = 'payment-method-sct-equens'
 group = com.payline.payment.sct-equens
-version = 1.5
+version = 1.6-SNAPSHOT
 
 paymentMethodApiVersion = 1.9
 gsonVersion = 2.8.5
